--- a/data/templates/index.html
+++ b/data/templates/index.html
@@ -13,7 +13,7 @@
     <h1><a href="data/html/map.html">GPX Leuven overview map</a></h1>
     <ul>
         {% for name, filename in names %}
-        <li><a href="data/html/{{ filename }}"> {{ name }}</a></li>
+        <li><a href="data/html/route_{{ filename }}"> {{ name }}</a></li>
         {% endfor %}
     </ul>
 </body>
