--- a/data/templates/profile.html
+++ b/data/templates/profile.html
@@ -22,7 +22,7 @@
 
     <script>
         // Assign the specification to a local variable vlSpec.
-        var vlSpec = "{{ json_file_path }}";
+        var vlSpec = "https://raw.githubusercontent.com/cast42/leuvengpx/main/{{ json_file_path }}";
         // Embed the visualization in the container with id `vis`
         vegaEmbed('#vis', vlSpec);
     </script>
