--- a/data/templates/route.html
+++ b/data/templates/route.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <iframe src="data/html/route_{{ html_file_path}}" style="border:none;" title="Route"></iframe>
+    <iframe src="{{ html_file_path }}" style="border:none;" title="Route"></iframe>
     <div id="vis"></div>
 
     <script>
