--- a/data/templates/index.html
+++ b/data/templates/index.html
@@ -46,6 +46,25 @@
             text-align: left;
             vertical-align: top
         }
+
+        .btn {
+            background-color: #38b580;
+            border: none;
+            color: white;
+            padding: 3px 5px;
+            cursor: pointer;
+            font-size: 10px;
+            width: 70px;
+        }
+
+        .btn a {
+            color: white;
+        }
+
+        /* Darker background on mouse-over */
+        .btn:hover {
+            background-color: #2e8e66;
+        }
     </style>
 </head>
 
@@ -62,10 +81,13 @@
                     {% for name in winddirection %}
                     {% if name.html_file %}
                     <ul>
-                        <li><a href="data/html/{{ name['html_file'] }}"> {{ name['gpx_name'] }}</a> <a
-                                href="data/gpx/{{ name['gpx_file'] }}" download="{{ name['gpx_file'] }}">
-                                Download
-                            </a></li>
+                        <li><a href="data/html/{{ name['html_file'] }}"> {{ name['gpx_name'] }}</a>
+                            <button class="btn"><i class="fa fa-download"></i>
+                                <a href="data/gpx/{{ name['gpx_file'] }}" download="{{ name['gpx_file'] }}">
+                                    Download
+                                </a>
+                            </button>
+                        </li>
                     </ul>
                     {% endif %}
                     {% endfor %}
