--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,17 @@ body {
     justify-content: center;
     color: #AAA;
 }
+
+.btn {
+    background-color: DodgerBlue;
+    border: none;
+    color: white;
+    padding: 12px 30px;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+/* Darker background on mouse-over */
+.btn:hover {
+    background-color: RoyalBlue;
+}
