--- a/data/templates/index.html
+++ b/data/templates/index.html
@@ -71,6 +71,25 @@
 <body>
     <h1><a href="data/html/map.html">GPX Leuven overview map</a></h1>
 
+    This is an overview of cycling routes that start at the Dataroots offices
+    in the vincinity of the railstation of Leuven. Alle road are well paved
+    with exceptional a one or more segments of gravel.
+    <ul>
+        <li>Click on the title above to get an
+            <a href="data/html/map.html">overview map</a>.
+        </li>
+        <li>Click on the title of the routes
+            to get a detail for every route on a map and a height profile.
+            For each route, the number of climbs are counted and indicated.
+            Climbs are defined as those ascents with a climb score above 1500.
+            The climb score is defined as the product of the lenght with
+            the average grade of the climb.
+        </li>
+        <li>
+            Click on the download button to download the corresponding gpx file.
+        </li>
+    </ul>
+
 
     <table class="tg">
         <tbody>
@@ -83,7 +102,7 @@
                     <ul>
                         <li><a href="data/html/{{ name['html_file'] }}"> {{ name['gpx_name'] }}</a>
                             <button class="btn"><i class="fa fa-download"></i>
-                                <a href="data/gpx/{{ name['gpx_file'] }}" download="{{ name['gpx_file'] }}">
+                                <a href="data/gpx/{{ name['gpx_file'] }}" download="{{ name['gpx_name'] }}">
                                     Download
                                 </a>
                             </button>
