add descriptive text

--- a/data/templates/index.html
+++ b/data/templates/index.html
@@ -71,9 +71,10 @@
 <body>
     <h1><a href="data/html/map.html">GPX Leuven overview map</a></h1>
 
-    This is an overview of cycling routes that start at the Dataroots offices
-    in the vincinity of the railstation of Leuven. Alle road are well paved
-    with exceptional a one or more segments of gravel.
+    This is an overview of cycling routes that start at the <a href="https://dataroots.io/contact-us/">Dataroots
+        offices</a>
+    in the vincinity of the railstation of Leuven. Most roads are well paved
+    with exceptional one or more segments of gravel.
     <ul>
         <li>Click on the title above to get an
             <a href="data/html/map.html">overview map</a>.
