add descriptive text

--- a/data/templates/index.html
+++ b/data/templates/index.html
@@ -74,7 +74,7 @@
     This is an overview of cycling routes that start at the <a href="https://dataroots.io/contact-us/">Dataroots
         offices</a>
     in the vincinity of the railstation of Leuven. Most roads are well paved
-    with exceptional one or more segments of gravel.
+    with at most one or few segments of gravel doable with a race bike.
     <ul>
         <li>Click on the title above to get an
             <a href="data/html/map.html">overview map</a>.
