--- a/data/templates/index.html
+++ b/data/templates/index.html
@@ -120,7 +120,7 @@
         </tbody>
     </table>
     <p>
-        The cycling routes are made with love by <a href="https://cast42.githubpages.io/blog">Lode Nachtergaele</a>.
+        The cycling routes are made with love by <a href="https://cast42.github.io/blog/">Lode Nachtergaele</a>.
         They serve the cycling
         enthousiast at Dataroots that enjoy a weekly afterwork ride. If you want to join those rides, join our <a
             href="https://www.strava.com/clubs/730705">Strava club</a>.
