new version of tout vent ride

--- a/data/templates/index.html
+++ b/data/templates/index.html
@@ -74,8 +74,8 @@
     <p>This is an overview of cycling routes that start at the
         <a href="https://dataroots.io/contact-us/">Dataroots offices</a>
         in the vincinity of the railstation of Leuven. Most roads are well paved
-        with at most one or few segments of gravel. Hence for this road
-        the a race bike is recommended.
+        with at most one or few segments of gravel. Hence for this roads
+        a race bike is recommended.
     </p>
     <ul>
         <li>Click on the title above to get an
